[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/fonts/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Login_panel.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/basefont.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/Cerate_playfab_panel.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/QR_request.gd" type="Script" id=5]
[ext_resource path="res://UI/Create_enjin_panel.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sprites/yellow_frame.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 1 )

[node name="Login_panel" type="Control"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -227.0
margin_right = 231.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.345098 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -1.0
margin_right = 1.0
margin_bottom = -1.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -63.0
margin_top = 37.0
margin_right = 56.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 2 )
text = "Log in:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.0
margin_top = 38.0
margin_right = 20.0
margin_bottom = 92.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "or"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="username" type="LineEdit" parent="."]
margin_left = 49.0
margin_top = 119.0
margin_right = 404.0
margin_bottom = 159.0
custom_fonts/font = ExtResource( 3 )

[node name="password" type="LineEdit" parent="."]
margin_left = 49.0
margin_top = 215.0
margin_right = 404.0
margin_bottom = 255.0
custom_fonts/font = ExtResource( 3 )
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 54.0
margin_top = 90.0
margin_right = 146.0
margin_bottom = 114.0
custom_fonts/font = ExtResource( 3 )
text = "Username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 54.0
margin_top = 182.0
margin_right = 146.0
margin_bottom = 206.0
custom_fonts/font = ExtResource( 3 )
text = "Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="login_but" type="Button" parent="."]
margin_left = 174.0
margin_top = 272.0
margin_right = 268.0
margin_bottom = 314.0
custom_fonts/font = SubResource( 3 )
disabled = true
text = "Log In"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="create_but" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -118.0
margin_top = -192.0
margin_right = 116.0
margin_bottom = -150.0
custom_fonts/font = SubResource( 4 )
text = "Create New User"

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -42.5
margin_top = -54.0
margin_right = 42.5
custom_fonts/font = SubResource( 5 )
text = "Quit"

[node name="Cerate_playfab_panel" parent="." instance=ExtResource( 4 )]
visible = false

[node name="QR_request" type="HTTPRequest" parent="."]
script = ExtResource( 5 )

[node name="Create_enjin_panel" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="pressed" from="login_but" to="." method="_on_login_but_pressed"]
[connection signal="pressed" from="create_but" to="." method="_on_create_but_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="QR_request" to="QR_request" method="_on_QR_request_request_completed"]
